--- a/일정.md
+++ b/일정.md
@@ -2,6 +2,33 @@
 
 ## 기초 지식 습득 일정
 ***
-## 1. 주제와 유사한 사례 분석 
-  * 3월 28일 
-## 2. 기자재 조사 및 환경 설정 
+### 1. 주제와 유사한 사례 분석 
+* 3월 28일 
+### 2. 기자재 조사 및 환경 설정 
+* 3월 29일 기자재 조사 
+* 3월 30일 환경설정 및 세팅 
+### 인공지능과 머신러닝, 딥러닝의 기본 개념 - *4월 15일 18:00 까지*
+* CNN개념 조사 - 양영식 
+* RNN개념 조사 – 이승종
+* GAN개념 조사 – 김성혁<br>
+***
+## 핵심 기술 습득 일정 
+### 1. OpenCV 라이브러리 기술, YOLO 알고리즘 기술
+* 5월 6일 - 이승종 
+* 5월 20일 까지 해당 기술 테스트 
+### 2. 위협도구 데이터 셋 구축 
+* 5월 27일 - 양영식 
+* 6월 17일 까지 해당 기술 테스트 
+### 3. 데이터셋 적용 방법 조사 및 적용 
+* 6월 24일 - 김성혁 
+* 7월 15일 까지 해당 기술 테스트 
+### 4. 반복동작 인식률 조사 
+* 7월 22일 - 이승종 
+* 7월 30일 까지 해당 기술 테스트 
+### 5. 개선 사항 및 후속 조치 
+* 8월 9일 - 양영식
+* 8월 29일 까지 해당 기술 테스트 
+### 6. 최종 동작 확인 및 동영상 제작 
+* 9월 8일 - 김성혁 
+
+    
