Update 04-08 교수님 지도말씀.md

--- a/04-08 교수님 지도말씀.md
+++ b/04-08 교수님 지도말씀.md
@@ -7,5 +7,8 @@
 * 실제 범죄현장은 위협도구를 보이지 않는 경우가 많음
 * 사전에 범인을 detecting 하는 기능이 필요 ex) 마스크, 비니, 무기를 소지, 무기를 숨긴 경우 등 
 * 확률에 기반하여 구현 
+* 현재 구현한 학습은 비현실적, 현실적 레이블링이 필요 
 ### 4. 경진대회를 적극적으로 참여할 것 
-* 대학생활은 우리가 만들어가는 것 
+* 대학 생활은 우리가 만들어가는 것 
+### 5. 멘토를 적극적 활용
+* 멘토의 조언과 수정된 방향을 기록하여 남길 것 
