Update and rename 04-08 교수님 지도말씀.md to 교수님 지도말씀.md

--- a/교수님 지도말씀.md
+++ b/교수님 지도말씀.md
@@ -1,4 +1,7 @@
-# 2022 4월 8일 교수님 지도말씀 요약
+# 목차
+[4월 8일 회의](#2022-4월-8일-교수님-지도말씀-요약)
+
+## 2022 4월 8일 교수님 지도말씀 요약
 
 ### 1. Git 만들고 공유 
 * 진행 과정 기록을 남기기 
