--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -1,19 +1,33 @@
 # 목차
 [3월 25일 회의](#2022년-3월-25일-회의기록)
-
+[3월 28일 회의](#2022년-3월-28일-회의기록)
 ## 2022년 3월 25일 회의기록
 
-### 1. 진행한 일
+### 1. 진행 완료
 ### 2. 현재 부족한 계획 파악 및 수정
 * 실시간 카메라를 사용하기 위한 해당 프로토콜 조사 및 카메라 선정
 * 기술의 필요성 파악 및 자료조사
 * 앞으로 진행될 한이음, 캡스턴 일정에 맞게 계획 조절
-
-### 카메라 선정.
+### 3. 할 일
 * 카메라 모듈을 통해 라즈베리파이에 연결 후 컴퓨터로 전송한다.
 * 도전사항: 모듈을 통해 얻어진 영상을 컴퓨터에 전송하는 방법. (라즈베리 파이에서는 성능이 부족하여 컴퓨터에서 영상처리를 하여야 한다.)
 * 추가적으로 다른 제품을 비교하고 조사 후 장단점 비교 및 제품 추천 – 양영식
 * 현재의 기술의 필요성을 파악 및 기술의 타겟 조사 및 선정 – 이승종
 * 한이음, 캡스턴 일정에 맞는 계획을 수정 및 구체화 – 김성혁
 * 해당 사항을 3/27(일) 18:00 까지 팀장에게 전달.
+
+## 2022년 3월 28일 회의기록
+### 1. 진행 완료
+* 한이음 일정 확인 및 주제 수정 요청완료
+* 구현 디바이스 선정 완료 (라즈베리파이4)
+* 기술의 필요성 및 파이카메라 연결 방법 종합 완료 
+* 절차 수정 : 리눅스 환경에서 핵심기능 구현 후 라즈베리파이4에 적용
+### 2. 현재 부족한 계획 파악 및 수정
+* 한이음 장비 지원 일정 확인
+* 4월 5일 전까지 팀원 전원 wsl2 리눅스 환경 구축 완료할 것 
+### 3. 할 일
+* 노트북에 Wsl2 설치(4월 5일 전까지 완료) 및 CNN 개념 자료– 양영식
+* RNN개념 조사 – 이승종
+* GAN개념 조사 – 김성혁
+* 해당 사항을 4/15(일) 18:00 까지 팀장에게 전달.
 
