--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -1,6 +1,7 @@
 # 목차
 [3월 25일 회의](#2022년-3월-25일-회의기록)  
 [3월 28일 회의](#2022년-3월-28일-회의기록)
+[3월 31일 회의](#2022년-3월-31일-회의기록)
 ## 2022년 3월 25일 회의기록
 
 ### 1. 진행 완료
@@ -31,3 +32,15 @@
 * GAN개념 조사 – 김성혁
 * 해당 사항을 4/15(일) 18:00 까지 팀장에게 전달.
 
+## 2022년 3월 31일 회의기록
+### 1. 진행 완료
+* Wsl2 설치 완료
+* OpenCV 설치 완료  
+### 1_1. 진행중
+* OpenCV 라이브러리 예제 분석 
+### 2. 현재 부족한 계획 파악 및 수정
+* Wsl2 에서 카메라 인식이 불가능하여 대안으로 멀티부팅과 vmware 사용 계획
+### 3. 할 일
+* 우분투 멀티부팅 및 OpenCV 환경세팅 – 김성혁
+* Vmware 우분투 및 OpenCV 환경세팅 – 양영식
+* Vmware 우분투 및 OpenCV 환경세팅 – 이승종
