--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -2,6 +2,7 @@
 [3월 25일 회의](#2022년-3월-25일-회의기록)  
 [3월 28일 회의](#2022년-3월-28일-회의기록)  
 [3월 31일 회의](#2022년-3월-31일-회의기록)  
+[4월 4일 회의](#2022년-4월-4일-회의기록) 
 ## 2022년 3월 25일 회의기록
 
 ### 1. 진행 완료
@@ -44,3 +45,17 @@
 * 우분투 멀티부팅 및 OpenCV 환경세팅 – 김성혁
 * Vmware 우분투 및 OpenCV 환경세팅 – 양영식
 * Vmware 우분투 및 OpenCV 환경세팅 – 이승종
+
+## 2022년 4월 4일 회의기록
+### 1. 진행 완료
+* 한이음 장비지원 신청 완료 (라즈베리파이4 8gb + v2카메라)
+* Vmware 와 듀얼부팅으로 Wsl2 대체 완료 
+* Linux 환경 OpenCV 카메라 작동 확인 
+### 1_1. 진행중
+* OpenCV 라이브러리 예제 분석 
+* Google Colab을 활용하여 식칼 이미지 학습 진행중 
+### 2. 현재 부족한 계획 파악 및 수정
+* Linux 환경에서 카메라 작동에 성공하였지만, gpu 없이 OpenCV 구동 시 프레임이 낮음. 
+### 3. 할 일
+* 프레임 개선을 위한 방법 자료 조사 실시 - 4/10(일) 18:00 까지 완료 후 팀장에게 전달
+
