Update 프레임 개선을 위한 방안.md

--- a/프레임 개선을 위한 방안.md
+++ b/프레임 개선을 위한 방안.md
@@ -5,5 +5,5 @@
 
 # Google Coral USB Accelerator 구매 
 ![image](https://user-images.githubusercontent.com/87261213/162565784-5630e3f6-f1d9-4bc3-a00e-c7a50610aeb6.png)
-* 라즈베리파이4 에서 약 30프레임 확보가능, 가격 9만원 
+* 라즈베리파이4 에서 약 26~27 FPS 확보가능, 가격 9만원 
 * ![image](https://user-images.githubusercontent.com/87261213/162565914-a873ceff-c8c7-43ac-8a18-3d323a5b7ab5.png)
