--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -3,6 +3,7 @@
 [3월 28일 회의](#2022년-3월-28일-회의기록)  
 [3월 31일 회의](#2022년-3월-31일-회의기록)  
 [4월 4일 회의](#2022년-4월-4일-회의기록) 
+[4월 11일 회의](#2022년-4월-11일-회의기록) 
 ## 2022년 3월 25일 회의기록
 
 ### 1. 진행 완료
@@ -59,3 +60,15 @@
 ### 3. 할 일
 * 프레임 개선을 위한 방법 자료 조사 실시 - 4/10(일) 18:00 까지 완료 후 팀장에게 전달
 
+## 2022년 4월 11일 회의기록
+### 1. 진행 완료
+* 한이음 장비지원 v2카메라 배송완료 
+* 한이음 장비지원 라즈베리파이4 승인완료(확인)
+### 1_1. 진행중
+* 라즈베리파이4 프레임 개선방법 조사
+* 카메라 위치선정 및 현실적인 구현방안 조사
+### 2. 현재 부족한 계획 파악 및 수정
+* 라즈베리파이4 개인별 구비 
+### 3. 할 일
+* 팀원 전원 라즈베리파이4 구매 
+* 한이음 2차 장비지원 기간 파이카메라 2대 추가 신청 
