--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -63,7 +63,7 @@
 ## 2022년 4월 11일 회의기록
 ### 1. 진행 완료
 * 한이음 장비지원 v2카메라 배송완료 
-* 한이음 장비지원 라즈베리파이4 승인완료(확인)
+* 한이음 장비지원 라즈베리파이4 승인완료
 ### 1_1. 진행중
 * 라즈베리파이4 프레임 개선방법 조사
 * 카메라 위치선정 및 현실적인 구현방안 조사
