--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -3,7 +3,9 @@
 [3월 28일 회의](#2022년-3월-28일-회의기록)  
 [3월 31일 회의](#2022년-3월-31일-회의기록)  
 [4월 4일 회의](#2022년-4월-4일-회의기록)  
-[4월 11일 회의](#2022년-4월-11일-회의기록) 
+[4월 11일 회의](#2022년-4월-11일-회의기록)  
+[4월 22일 회의](#2022년-4월-22일-회의기록) 
+
 ## 2022년 3월 25일 회의기록
 
 ### 1. 진행 완료
@@ -72,3 +74,17 @@
 ### 3. 할 일
 * 팀원 전원 라즈베리파이4 구매 
 * 한이음 2차 장비지원 기간 파이카메라 2대 추가 신청 
+
+## 2022년 4월 22일 회의기록
+### 1. 진행 완료
+* 한이음 장비지원 1차 수령 완료
+* 팀원 전원 라즈베리파이4 구비 완료
+* 라즈베리파이4와 pc 소켓 통신 성공 -양영식
+### 1_1. 진행중
+* 카메라 위치선정 및 현실적인 구현방안 조사
+* 26일 캡스톤 진행사항 발표 준비 
+### 2. 현재 부족한 계획 파악 및 수정
+* 팀원 전원 소켓통신 구현
+### 3. 할 일
+* 한이음 2차 장비지원 기간 파이카메라 2대 추가 신청
+* 한이음 2차 장비지원 추가할 사항 25일까지 팀장에게 제출
