--- a/팀원 회의.md
+++ b/팀원 회의.md
@@ -5,6 +5,7 @@
 [4월 4일 회의](#2022년-4월-4일-회의기록)  
 [4월 11일 회의](#2022년-4월-11일-회의기록)  
 [4월 22일 회의](#2022년-4월-22일-회의기록) 
+[5월 2일 회의](#2022년-5월-2일-회의기록) 
 
 ## 2022년 3월 25일 회의기록
 
@@ -88,3 +89,20 @@
 ### 3. 할 일
 * 한이음 2차 장비지원 기간 파이카메라 2대 추가 신청
 * 한이음 2차 장비지원 추가할 사항 25일까지 팀장에게 제출
+
+## 2022년 5월 2일 회의기록
+### 1. 진행 완료
+* Nodejs를 통한 경보서버 간단하게 구현
+* 소켓통신 작동 확인 
+* 캡스턴 디자인 발표 준비 
+### 1_1. 진행중
+* 현실적인 구현방안 조사
+* 학습 데이터 크기 설정 
+### 2. 할 일
+* 대면 진행 (5월 4일 수요일 오후 1시 30분) 
+* 대면을 통하여 파이 카메라 화각을 직접 보고 카메라 위치 합의할 계획
+### 3. 회의록 (주요의견)
+* 김성혁 : 키오스크를 기준으로 높이 180cm 설치, 거리는 60cm, 집 근처 매장의 천장까지 평균 높이 2.3m 이며 모두 cctv가 천장에 매립되어 설치 되어 있음. 가능한 높은 위치에 설치 하는게 현실적으로 보임. 
+* 이승종 : 키오스크를 기준으로 높이 160cm 설치, 거리는 40~50cm, 범인을 포착한 후 알림을 나타낼 필요가 있음. (ex 알림을 위한 앱을 제작)
+* 양영식 : 키오스크를 기준으로 카메라 높이 150cm 설치, 다양한 크기의 물체를 여러 각도에서 학습 하는게 필요
+
