--- a/교수님 지도말씀.md
+++ b/교수님 지도말씀.md
@@ -1,6 +1,6 @@
 # 목차
-[4월 8일 회의](#2022-4월-8일-교수님-지도말씀-요약)
-
+[4월 8일 회의](#2022-4월-8일-교수님-지도말씀-요약)  
+[5월 20일 회의](#2022-5월-20일-교수님-지도말씀-요약)
 ## 2022 4월 8일 교수님 지도말씀 요약
 
 ### 1. Git 만들고 공유 
@@ -15,3 +15,24 @@
 * 대학 생활은 우리가 만들어가는 것 
 ### 5. 멘토를 적극적 활용
 * 멘토의 조언과 수정된 방향을 기록하여 남길 것 
+
+## 2022 5월 20일 교수님 지도말씀 요약
+
+### 1. 주제를 깊이있게 고민하고 선정할 것.
+* 주관을 가지고 주제를 선정하고 의견이 달라도 설명할 수 있어야 함
+* 주제를 의무적으로 하나씩 내는건 불필요
+* 즉흥적으로 아이디어 내지 말 것
+
+### 2. 주차관리 아이디어
+* 기존 시스템과 차별성이 없고 비용절감이 확실한가?
+* 기존 시스템을 똑같이 구현하기 보다는 확률에 기반하여 제시할 수 있는 방법이 필요하다.
+
+### 3. 손동작 전자책 뷰어 아이디어 
+* 손동작으로 판단하기에는 정확도가 불안정하다.
+* 사람들은 귀찮은걸 하기 싫어함. 현재 상용화도 되어있고 그마저도 사용하지 않음.
+* 차라리 폰에 연동하는 앱이 더 중요하다.
+
+### 4. 부족한 점
+* 회의록을 계속 올릴 것. 회의록이 많이 부족함.
+* 팀장 리더십이 매우 중요하고 사고방식을 바꾸기. 
+* 각자 본인 하고싶은 얘기만 한다. 이기주의적 사고를 바꾸고 남과 커뮤니케이션 할 것.
